--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2467,6 +2467,14 @@
     "Remember Me": "تذكرنى",
     "Forgot password?": "هل نسيت كلمة السر؟",
     "Sign in with demo account": "تسجيل الدخول بحساب تجريبي",
+    "Our Partner Factories": "أبرز المصانع",
+    "Explore a curated network of verified and trusted factories": "تعرّف على أفضل المصانع الموثوقة ضمن قائمتنا المختارة بعناية",
+    "No reviews yet": "لا يوجد تقييمات بعد",
+    "Visit Factory": "عرض بروفايل المصنع",
+    "No Factories Found": "لم يتم العثور على مصانع",
+    "We are working on adding more factories to our platform. Check back soon!": "نحن نعمل على إضافة المزيد من المصانع إلى المنصة. يرجى التحقق مرة أخرى قريباً!",
+    "Back to Home": "العودة إلى الرئيسية",
+
     "VENDOR": "بائع",
     "Create Buyer Account": "أنشئ حساب المشتري",
     "Already have an account? Login": "هل لديك حساب؟ تسجيل الدخول",
