--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1159,6 +1159,13 @@
     "Brand": "Brand",
     "Total Product": "Total Product",
     "Qty": "Qty",
+    "Our Partner Factories": "Our Partner Factories",
+    "Explore a curated network of verified and trusted factories": "Explore a curated network of verified and trusted factories",
+    "No reviews yet": "No reviews yet",
+    "Visit Factory": "Visit Factory",
+    "No Factories Found": "No Factories Found",
+    "We are working on adding more factories to our platform. Check back soon!": "We are working on adding more factories to our platform. Check back soon!",
+    "Back to Home": "Back to Home",
     "Tag": "Tag",
     "Product Count": "Product Count",
     "Subtotal": "Subtotal",
