--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -910,8 +910,8 @@
     "Inventory": "Inventory",
     "Order fulfill": "Order fulfill",
     "From highest location to priority order": "From highest location to priority order",
-    "Default/Primary location": "Default/Primary location",
-    "While order/refund stock will reduce/add based on settings": "While order/refund stock will reduce/add based on settings",
+    "Default\/Primary location": "Default\/Primary location",
+    "While order\/refund stock will reduce\/add based on settings": "While order\/refund stock will reduce\/add based on settings",
     "Adjust stock": "Adjust stock",
     "Adjust Type": "Adjust Type",
     "Move to unavailable": "Move to unavailable",
@@ -1011,7 +1011,7 @@
     "Subscribers": "Subscribers",
     "Page Updated": "Page Updated",
     "Import Template": "Import Template",
-    "Paste here your HTML/CSS and click Import": "Paste here your HTML/CSS and click Import",
+    "Paste here your HTML\/CSS and click Import": "Paste here your HTML\/CSS and click Import",
     "Are you sure to clear the canvas?": "Are you sure to clear the canvas?",
     "Save Template": "Save Template",
     "Preview in new tab": "Preview in new tab",
@@ -1303,7 +1303,7 @@
     "Stripe Documentation": "Stripe Documentation",
     "Publishable Key": "Publishable Key",
     "Client Secret": "Client Secret",
-    "Please specify sandbox enabled/disabled.": "Please specify sandbox enabled/disabled.",
+    "Please specify sandbox enabled\/disabled.": "Please specify sandbox enabled\/disabled.",
     "Stripe settings updated.": "Stripe settings updated.",
     "Payment Request failed due to some issues. Please try again later.": "Payment Request failed due to some issues. Please try again later.",
     "Error while trying to setup stripe.": "Error while trying to setup stripe.",
@@ -1479,7 +1479,7 @@
     "A successful update will lose custom works.": "A successful update will lose custom works.",
     "Before performing an update, it is strongly recommended to create a full backup of your current installation (files and database) and review the changelog": "Before performing an update, it is strongly recommended to create a full backup of your current installation (files and database) and review the changelog",
     "Purchase code": "Purchase code",
-    "Purchase Key/Code": "Purchase Key/Code",
+    "Purchase Key\/Code": "Purchase Key\/Code",
     "Where Is My Purchase Code?": "Where Is My Purchase Code?",
     "Current version": "Current version",
     "Latest version": "Latest version",
@@ -1758,7 +1758,6 @@
     "Withdrawal": "Withdrawal",
     "You do not have permission to access these records.": "You do not have permission to access these records.",
     "Your seller account is not activate yet. Please contact with site administrator.": "Your seller account is not activate yet. Please contact with site administrator.",
-    "Demo Mode! This action can't be perform.": "Demo Mode! This action can't be perform.",
     "Invalid User! This action can't be perform.": "Invalid User! This action can't be perform.",
     "Unauthorized! Go home, grow up and get authorization": "Unauthorized! Go home, grow up and get authorization",
     "Invalid characters are present in your api URL.": "Invalid characters are present in your api URL.",
@@ -2066,7 +2065,7 @@
     "Coupons for referral": "Coupons for referral",
     "Use coupons for referral - along with affiliated links": "Use coupons for referral - along with affiliated links",
     "Cookie duration (in days)": "Cookie duration (in days)",
-    "Use 0 for session only referrals. Use 36500 for 100 year / lifetime referrals. If someone makes a purchase within these many days of their first referred visit, affiliate will be credited for the sale.": "Use 0 for session only referrals. Use 36500 for 100 year / lifetime referrals. If someone makes a purchase within these many days of their first referred visit, affiliate will be credited for the sale.",
+    "Use 0 for session only referrals. Use 36500 for 100 year \/ lifetime referrals. If someone makes a purchase within these many days of their first referred visit, affiliate will be credited for the sale.": "Use 0 for session only referrals. Use 36500 for 100 year \/ lifetime referrals. If someone makes a purchase within these many days of their first referred visit, affiliate will be credited for the sale.",
     "Lifetime commissions": "Lifetime commissions",
     "Allow affiliates to receive lifetime commissions": "Allow affiliates to receive lifetime commissions",
     "Affiliates will receive commissions for every sale made by the same customer linked to this affiliate - without using referral link or coupon.)": "Affiliates will receive commissions for every sale made by the same customer linked to this affiliate - without using referral link or coupon.)",
@@ -2076,7 +2075,7 @@
     "Exclude the affiliates either by individual affiliates user to not give them lifetime commissions.": "Exclude the affiliates either by individual affiliates user to not give them lifetime commissions.",
     "Affiliate self-refer": "Affiliate self-refer",
     "Allow affiliates to earn commissions on their own orders": "Allow affiliates to earn commissions on their own orders",
-    "Disabling this will not record a commission if an affiliate uses their own referral link/coupons during orders)": "Disabling this will not record a commission if an affiliate uses their own referral link/coupons during orders)",
+    "Disabling this will not record a commission if an affiliate uses their own referral link\/coupons during orders)": "Disabling this will not record a commission if an affiliate uses their own referral link\/coupons during orders)",
     "Send referral details to admin": "Send referral details to admin",
     "Disabling this will not include affiliate referral details in the email to admin.": "Disabling this will not include affiliate referral details in the email to admin.",
     "Affiliate Users": "Affiliate Users",
@@ -2194,7 +2193,7 @@
     "At the moment, multi-vendor functionality is disabled.": "At the moment, multi-vendor functionality is disabled.",
     "Disable Multivendor": "Disable Multivendor",
     "Esewa Documentation": "Esewa Documentation",
-    "Merchant ID/Service Code": "Merchant ID/Service Code",
+    "Merchant ID\/Service Code": "Merchant ID\/Service Code",
     "Esewa settings updated.": "Esewa settings updated.",
     "Currency not supported by merchant": "Currency not supported by merchant",
     "Payment cancelled from Esewa.": "Payment cancelled from Esewa.",
@@ -2204,7 +2203,7 @@
     "Facebook messenger": "Facebook messenger",
     "Facebook Messenger Setup": "Facebook Messenger Setup",
     "Enable": "Enable",
-    "Enable/Disable to show or hide Facebook Messenger on site": "Enable/Disable to show or hide Facebook Messenger on site",
+    "Enable\/Disable to show or hide Facebook Messenger on site": "Enable\/Disable to show or hide Facebook Messenger on site",
     "Widget Code": "Widget Code",
     "Where you find facebook messenger to widget code?": "Where you find facebook messenger to widget code?",
     "Messenger config": "Messenger config",
@@ -2367,8 +2366,8 @@
     "Product Categories": "Product Categories",
     "Additional Pages": "Additional Pages",
     "Exclude Categories": "Exclude Categories",
-    "Here you can specify files or URLs which should be included in the sitemap, but do not belong to your Site/Application.": "Here you can specify files or URLs which should be included in the sitemap, but do not belong to your Site/Application.",
-    "For example, if your domain is :domain and your site is located on :domain/site, you might want to include your homepage at :domain.": "For example, if your domain is :domain and your site is located on :domain/site, you might want to include your homepage at :domain.",
+    "Here you can specify files or URLs which should be included in the sitemap, but do not belong to your Site\/Application.": "Here you can specify files or URLs which should be included in the sitemap, but do not belong to your Site\/Application.",
+    "For example, if your domain is :domain and your site is located on :domain\/site, you might want to include your homepage at :domain.": "For example, if your domain is :domain and your site is located on :domain\/site, you might want to include your homepage at :domain.",
     "If your site is in a subdirectory and you want to add pages which are NOT in the site directory or beneath, you MUST place your sitemap file in the root directory (Look at the 'Location of your sitemap file": "If your site is in a subdirectory and you want to add pages which are NOT in the site directory or beneath, you MUST place your sitemap file in the root directory (Look at the 'Location of your sitemap file",
     "URL to the page": "URL to the page",
     "Enter the URL to the page. Examples: :example1 or :example2": "Enter the URL to the page. Examples: :example1 or :example2",
@@ -2446,7 +2445,7 @@
     "Something is wrong with Stripe Recurring. Please try again.": "Something is wrong with Stripe Recurring. Please try again.",
     "Tawk.to successfully updated.": "Tawk.to successfully updated.",
     "Tawk Setup": "Tawk Setup",
-    "Enable/Disable to show or hide Tawk.to on site": "Enable/Disable to show or hide Tawk.to on site",
+    "Enable\/Disable to show or hide Tawk.to on site": "Enable\/Disable to show or hide Tawk.to on site",
     "Where you find tawk to widget code?": "Where you find tawk to widget code?",
     "Tawk.to": "Tawk.to",
     "Vogue Pay Documentation": "Vogue Pay Documentation",
@@ -2980,7 +2979,7 @@
     "Which product types should be exported?": "Which product types should be exported?",
     "Simple product": "Simple product",
     "Grouped product": "Grouped product",
-    "External/Affiliate product": "External/Affiliate product",
+    "External\/Affiliate product": "External\/Affiliate product",
     "Variable product": "Variable product",
     "Product variations": "Product variations",
     "Which product category should be exported?": "Which product category should be exported?",
@@ -3121,7 +3120,7 @@
     "View :x": "View :x",
     "Please let me know, why are you want to refund this item.": "Please let me know, why are you want to refund this item.",
     "Choose an action..": "Choose an action..",
-    "Email invoice / order details to customer": "Email invoice / order details to customer",
+    "Email invoice \/ order details to customer": "Email invoice \/ order details to customer",
     "Resend Order Email (Vendor)": "Resend Order Email (Vendor)",
     "Completed": "Completed",
     "Refunded": "Refunded",
@@ -3170,7 +3169,7 @@
     "Include Symbols": "Include Symbols",
     "Simple product.": "Simple product.",
     "Grouped product.": "Grouped product.",
-    "External/Affilate product.": "External/Affilate product.",
+    "External\/Affilate product.": "External\/Affilate product.",
     "Variable product.": "Variable product.",
     "Rates will be configurable and taxes will be calculated during checkout.": "Rates will be configurable and taxes will be calculated during checkout.",
     "Apply Coupon": "Apply Coupon",
@@ -3542,7 +3541,7 @@
     "Why sell on multivendor?": "Why sell on multivendor?",
     "Low fees": "Low fees",
     "Swift System": "Swift System",
-    "24/7 support": "24/7 support",
+    "24\/7 support": "24\/7 support",
     "The process": "The process",
     "Step 1": "Step 1",
     "Fill in the sign up form with your personal and shop details": "Fill in the sign up form with your personal and shop details",
@@ -3681,7 +3680,7 @@
     "Type your product name..": "Type your product name..",
     "Sorry, nothing found for": "Sorry, nothing found for",
     "Popular Search": "Popular Search",
-    "Seller/Vendor": "Seller/Vendor",
+    "Seller\/Vendor": "Seller\/Vendor",
     "My Account": "My Account",
     "Logout": "Logout",
     "Your Cart": "Your Cart",
@@ -3802,7 +3801,7 @@
     "Order Date: 12 Feb, 2022 at 4:32 pm": "Order Date: 12 Feb, 2022 at 4:32 pm",
     "shipping address": "shipping address",
     "JOY BUANGARO CUMILLA": "JOY BUANGARO CUMILLA",
-    "RT3/A, Kazi Sheikhs & Jonns, Tongi, Gazipur, Dhaka, Bangladesh.": "RT3/A, Kazi Sheikhs & Jonns, Tongi, Gazipur, Dhaka, Bangladesh.",
+    "RT3\/A, Kazi Sheikhs & Jonns, Tongi, Gazipur, Dhaka, Bangladesh.": "RT3\/A, Kazi Sheikhs & Jonns, Tongi, Gazipur, Dhaka, Bangladesh.",
     "Payment pending": "Payment pending",
     "processing": "processing",
     "shipped": "shipped",
@@ -4003,10 +4002,18 @@
     "or payment method.": "or payment method.",
     "AI-Powered Matching": "AI-Powered Matching",
     "Advanced AI algorithms to match Saudi products with global buyers": "Advanced AI algorithms to match Saudi products with global buyers",
-   
     "Connect Saudi manufacturers with buyers worldwide": "Connect Saudi manufacturers with buyers worldwide",
     "Secure & Transparent": "Secure & Transparent",
     "Trusted platform with secure transactions and transparent processes": "Trusted platform with secure transactions and transparent processes",
     "Supporting Vision 2030": "Supporting Vision 2030",
-    "Your trusted B2B digital platform connecting Saudi manufacturers with global buyers": "Your trusted B2B digital platform connecting Saudi manufacturers with global buyers"
+    "Your trusted B2B digital platform connecting Saudi manufacturers with global buyers": "Your trusted B2B digital platform connecting Saudi manufacturers with global buyers",
+    "Bunny CDN": "Bunny CDN",
+    "DO CDN is enabled": "DO CDN is enabled",
+    "DO CDN URL": "DO CDN URL",
+    "Wasabi URL": "Wasabi URL",
+    "Wasabi Root": "Wasabi Root",
+    "Bunny CDN Host Name": "Bunny CDN Host Name",
+    "Bunny CDN Zone Name": "Bunny CDN Zone Name",
+    "Bunny CDN FTP & API Access Password": "Bunny CDN FTP & API Access Password",
+    "Bunny CDN Default Region": "Bunny CDN Default Region"
 }
