Refactor SEO meta handling and improve category logic

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -16,9 +16,20 @@
     "Choose file": "اختر ملف",
     "Addons": "الإضافات",
     "About Us": "من نحن",
-    "Upload Addon": "تحميل الملحق",
+    "Saudi Exports Services": "خدمات الصادرات السعودية",
+    "Exports Valley is a Saudi company specialized in export services and support for exporters, including consultations, market research, logistics, and international shipping for the success of products outside the Kingdom of Saudi Arabia.": "إكسبورتس فالي شركة سعودية متخصصة بخدمات التصدير ودعم المصدرين، من استشارات وبحوث سوق ولوجستيات وشحن دولي لنجاح المنتجات خارج المملكة العربية السعودية",
+    "Saudi Exports Program": "برنامج الصادرات السعودية",
+    "Learn about Exports Valley's privacy policy and how we protect company and exporter data within the Saudi Export Program according to the highest standards of security and transparency.": "تعرف على سياسة الخصوصية في إكسبورتس فالي وكيف نحمي بيانات الشركات والمصدرين ضمن برنامج الصادرات السعودية وفق أعلى معايير الأمان والشفافية",
+    "Terms and Conditions of Buyer": "شروط واحكام المشتري",
+    "Saudi Exports": " صادرات السعودية",
+    "Learn about Exports Valley's buyer terms and conditions, purchasing rights and responsibilities, and payment, shipping, and return policies in accordance with Saudi export regulations.": "تعرف على شروط وأحكام المشتري في إكسبورتس فالي، حقوق ومسؤوليات الشراء، وسياسات الدفع والشحن والاسترجاع وفق لوائح الصادرات السعودية",
+    "Terms and Conditions of Seller": "الشروط و الأحكام للبائع",
+    "The terms and conditions for sellers at Exports Valley clarify the rights and obligations of sellers, the sales mechanism, policies, and guarantees of compliance with Saudi export regulations and standards.": "الشروط والأحكام للبائع في إكسبورتس فالي توضح حقوق والتزامات البائعين، آلية البيع، السياسات، وضمان الامتثال لأنظمة ولوائح الصادرات السعودية",
     "Upload Zip File": "تحميل ملف مضغوط",
+    "Create a price quote through Exports Valley to get reliable export offers from Saudi Arabia, connect with suppliers, compare prices, and start your journey to global markets.": "إنشاء طلب سعر عبر إكسبورتس فالي للحصول على عروض تصدير موثوقة من السعودية، تواصل مع الموردين، قارن الأسعار، وابدأ رحلتك نحو الأسواق العالمية",
+    "Best website for exporting from Saudi Arabia": "أفضل موقع للتصدير من السعودية",
     "Browse": "تصفح",
+    "The categories on Exports Valley bring together export-ready products and services, making it easier for companies to discover the best opportunities and markets through one of the best export websites from Saudi Arabia.": " التصنيفات في إكسبورتس فالي تجمع منتجات وخدمات جاهزة للتصدير، وتسهّل على الشركات اكتشاف أفضل الفرص والأسواق عبر أحد أفضل مواقع التصدير من السعودية",
     "Note": "ملحوظة",
     "Upload your addon zip file.": "قم بتحميل ملف مضغوط الخاص بالملحق.",
     "Cancel": "الغاء",
@@ -2474,7 +2485,6 @@
     "No Factories Found": "لم يتم العثور على مصانع",
     "We are working on adding more factories to our platform. Check back soon!": "نحن نعمل على إضافة المزيد من المصانع إلى المنصة. يرجى التحقق مرة أخرى قريباً!",
     "Back to Home": "العودة إلى الرئيسية",
-
     "VENDOR": "بائع",
     "Create Buyer Account": "أنشئ حساب المشتري",
     "Already have an account? Login": "هل لديك حساب؟ تسجيل الدخول",
@@ -3955,7 +3965,7 @@
     "No review found!": "لم يتم العثور على مراجعة!",
     "We're sorry!": "آسفون!",
     "Factories Services": "خدمات المصانع",
-    "Smart solutions to help Saudi factories display their products and connect directly with importers around the world.":"حلول ذكية لمساعدة المصانع السعودية على عرض منتجاتها والتواصل مباشرة مع المستوردين حول العالم.",
+    "Smart solutions to help Saudi factories display their products and connect directly with importers around the world.": "حلول ذكية لمساعدة المصانع السعودية على عرض منتجاتها والتواصل مباشرة مع المستوردين حول العالم.",
     "Please check your login activities below.": "يرجى التحقق من أنشطة تسجيل الدخول الخاصة بك أدناه.",
     "No activites found.": "لم يتم العثور على أنشطة.",
     "Update Pasword": "تحديث كلمة المرور",
