--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -21,7 +21,19 @@
     "SEO optimization": "SEO optimization",
     "Post news inside the platform": "Post news inside the platform",
     "RFQ priority": "RFQ priority",
+    "Saudi Exports Services": "Saudi Exports Services",
+    "Exports Valley is a Saudi company specialized in export services and support for exporters, including consultations, market research, logistics, and international shipping for the success of products outside the Kingdom of Saudi Arabia.": "Exports Valley is a Saudi company specialized in export services and support for exporters, including consultations, market research, logistics, and international shipping for the success of products outside the Kingdom of Saudi Arabia.",
+    "Saudi Exports Program": "Saudi Exports Program",
+    "Learn about Exports Valley's privacy policy and how we protect company and exporter data within the Saudi Export Program according to the highest standards of security and transparency.": "Learn about Exports Valley's privacy policy and how we protect company and exporter data within the Saudi Export Program according to the highest standards of security and transparency.",
+    "Terms and Conditions of Buyer": "Terms and Conditions of Buyer",
+    "Saudi Exports": "Saudi Exports",
+    "Learn about Exports Valley's buyer terms and conditions, purchasing rights and responsibilities, and payment, shipping, and return policies in accordance with Saudi export regulations.": "Learn about Exports Valley's buyer terms and conditions, purchasing rights and responsibilities, and payment, shipping, and return policies in accordance with Saudi export regulations.",
+    "Terms and Conditions of Seller": "Terms and Conditions of Seller",
+    "The terms and conditions for sellers at Exports Valley clarify the rights and obligations of sellers, the sales mechanism, policies, and guarantees of compliance with Saudi export regulations and standards.": "The terms and conditions for sellers at Exports Valley clarify the rights and obligations of sellers, the sales mechanism, policies, and guarantees of compliance with Saudi export regulations and standards.",
+    "Create a price quote through Exports Valley to get reliable export offers from Saudi Arabia, connect with suppliers, compare prices, and start your journey to global markets.": "Create a price quote through Exports Valley to get reliable export offers from Saudi Arabia, connect with suppliers, compare prices, and start your journey to global markets.",
     "Addons": "Addons",
+    "The categories on Exports Valley bring together export-ready products and services, making it easier for companies to discover the best opportunities and markets through one of the best export websites from Saudi Arabia.": "The categories on Exports Valley bring together export-ready products and services, making it easier for companies to discover the best opportunities and markets through one of the best export websites from Saudi Arabia.",
+    "Best website for exporting from Saudi Arabia": "Best website for exporting from Saudi Arabia",
     "Upload Addon": "Upload Addon",
     "Upload Zip File": "Upload Zip File",
     "Browse": "Browse",
