--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -79,6 +79,14 @@
     "Product": "المنتج",
     "Quantity": "الكمية",
     "Sales": "مبيعات",
+    "Days Free": "أيام مجانية",
+    "Months Free": "أشهر مجانية",
+    "Get": "أحصل على",
+    "Add Payment Card": "أضف بطاقة دفع",
+    "Current Plan": "الاشتراك الحالي",
+    "Holder Name": "اسم صاحب البطاقة",
+    "Expiry Date": "تاريخ انتهاء البطاقة",
+    "Your transaction is secured with ssl certificate": "هذه العمليه محمية بشهادة SSL",
     "Amount": "مقدار",
     "Created At": "أنشئت في",
     "Can not be deleted. This :x has records!": "لا يمكن حذفه. هذا: x لديه سجلات!",
@@ -1279,7 +1287,7 @@
     "View Popup": "مشاهدة ملف Popup",
     "Orders": "الطلب #٪ s",
     "Invoice": "فاتورة",
-    "History": "المعاملات السابقة",
+    "History": "العمليات السابقة",
     "Created": "تم إنشاؤه",
     "Create RFQs": "إنشاء طلب سعر",
     "Fill out the form below to submit your quotation request": " أدخل البيانات التالية لإرسال طلب السعر",
