--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -21,6 +21,14 @@
     "SEO optimization": "SEO optimization",
     "Post news inside the platform": "Post news inside the platform",
     "RFQ priority": "RFQ priority",
+    "Days Free": "Days Free",
+    "Months Free": "Months Free",
+    "Get": "Get",
+    "Current Plan": "Current Plan",
+    "Add Payment Card": "Add Payment Card",
+    "Holder Name": "Holder Name",
+    "Expiry Date": "Expiry Date",
+    "Your transaction is secured with ssl certificate": "Your transaction is secured with ssl certificate",
     "Saudi Exports Services": "Saudi Exports Services",
     "Exports Valley is a Saudi company specialized in export services and support for exporters, including consultations, market research, logistics, and international shipping for the success of products outside the Kingdom of Saudi Arabia.": "Exports Valley is a Saudi company specialized in export services and support for exporters, including consultations, market research, logistics, and international shipping for the success of products outside the Kingdom of Saudi Arabia.",
     "Saudi Exports Program": "Saudi Exports Program",
