--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1289,7 +1289,10 @@
     "Invoice": "فاتورة",
     "History": "العمليات السابقة",
     "Created": "تم إنشاؤه",
+    "Saudi Factories": "المصانع السعودية",
+    "Vendor Staff limit": "حد طاقم المصنع",
     "Create RFQs": "إنشاء طلب سعر",
+    "All Saudi factory products available at Exports Valley are included in the Saudi Exports Directory, offering ready-made export solutions, reliable quality, and opportunities to access diverse global markets.": "كل منتجات المصانع السعودية المتاحة لدى إكسبورتس فالي ضمن دليل الصادرات السعودية، حلول تصدير جاهزة، جودة موثوقة، وفرص للوصول إلى أسواق عالمية متنوعة.",
     "Fill out the form below to submit your quotation request": " أدخل البيانات التالية لإرسال طلب السعر",
     "POS": "نقاط البيع",
     "Address not found.": "لم يتم العثور على العنوان.",
