--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -24,6 +24,9 @@
     "Days Free": "Days Free",
     "Months Free": "Months Free",
     "Get": "Get",
+    "Saudi Factories": "Saudi Factories",
+    "All Saudi factory products available at Exports Valley are included in the Saudi Exports Directory, offering ready-made export solutions, reliable quality, and opportunities to access diverse global markets.": "All Saudi factory products available at Exports Valley are included in the Saudi Exports Directory, offering ready-made export solutions, reliable quality, and opportunities to access diverse global markets.",
+    "Vendor Staff limit": "Vendor Staff limit",
     "Current Plan": "Current Plan",
     "Add Payment Card": "Add Payment Card",
     "Holder Name": "Holder Name",
