--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2261,8 +2261,8 @@
     "Opps! Data not found.": "عفوا! لم يتم العثور على بيانات.",
     "Failed to create new user.": "فشل إنشاء مستخدم جديد.",
     "The results could not be loaded.": "لا يمكن تحميل النتائج.",
-    "Please enter": "تفضل",
-    "or more characters": "أو أكثر من الشخصيات",
+    "Please enter": "الرجاء إدخال",
+    "or more characters": "أو أكثر من الحروف",
     "Loading more results": "تحميل المزيد من النتائج",
     "No results found": "لم يتم العثور على نتائج",
     "Searching": "يبحث",
