--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2258,6 +2258,8 @@
     "Most Sold Brand": "العلامة التجارية الأكثر مبيعا",
     "Popular Customer": "زبون مشهور",
     "Wallet": "محفظة",
+    "Frequently Asked Questions": "الأسئلة الشائعة",
+    "Frequently Asked Questions about Exports Valley": "الأسئلة الشائعة حول إكسبورتس فالي",
     "Opps! Data not found.": "عفوا! لم يتم العثور على بيانات.",
     "Failed to create new user.": "فشل إنشاء مستخدم جديد.",
     "The results could not be loaded.": "لا يمكن تحميل النتائج.",
