--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2258,6 +2258,7 @@
     "Most Sold Brand": "العلامة التجارية الأكثر مبيعا",
     "Popular Customer": "زبون مشهور",
     "Wallet": "محفظة",
+    "Faqs": "الأسئلة الشائعة",
     "Frequently Asked Questions": "الأسئلة الشائعة",
     "Frequently Asked Questions about Exports Valley": "الأسئلة الشائعة حول إكسبورتس فالي",
     "Opps! Data not found.": "عفوا! لم يتم العثور على بيانات.",
