--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -13,6 +13,7 @@
     "Addon successfully removed.": "Addon successfully removed.",
     "Choose file": "Choose file",
     "Order Now": "Order Now",
+    "Faqs": "Faqs",
     "Frequently Asked Questions": "Frequently Asked Questions",
     "Frequently Asked Questions about Exports Valley": "Frequently Asked Questions about Exports Valley",
     "Show company description": "Show company description",
